<resources>
    <string name="app_name">PJ Accounting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_title">PJ Accounting</string>
    <string name="nav_header_subtitle">Welcome user</string>
    <string name="menu_home">Home</string>
    <string name="menu_savings">Savings</string>
    <string name="menu_card">Credit/Debit Cards</string>
    <string name="menu_cash">Cash</string>
    <string name="menu_tickets">Tickets</string>
    <string name="menu_spents">Spents</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_howto">How To?</string>
    <string name="menu_rateus">Rate Us</string>
    <string name="menu_contact">Contact Us</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Open Close</string>
    <string name="AddIncOutTxt">Add Income | Outcome</string>
    <string name="CardNumbers">XXXX - XXXX - XXXX - XXXX</string>
    <string name="CardTypeTxt">Card Type</string>
    <string name="CardDate1">00/00</string>
    <string name="CardDate2">00/00</string>
    <string name="HistoryTxt">See history</string>
    <string name="tittle_start_text">Start</string>
    <string name="boton_inicio">Let\'s go!</string>
    <string name="start_name_edit_text">Enter your name</string>
    <string name="add_saving_text">Add Saving</string>
    <string name="add_saving_description">Saving Type</string>
    <string name="agrega_el_monto">add amount</string>
    <string name="card_2_text">Card 2\nCut off day\nPayment day</string>
    <string name="Card_1_tetx">Card 1\nCut off day\nPayment day</string>
    <string name="AddCardtxt1">Name</string>
    <string name="addCardHint1">Method name</string>
    <string name="addCardTxt2">Type</string>
    <string name="addCardTxt3">Cut-off Day</string>
    <string name="addCardTxt4">Payment day</string>
    <string name="addCardTitle">New payment method</string>
    <string name="CardsTitle">Cards</string>
    <string name="addSpent">Add</string>
    <string name="hint_addincout1">Add amount</string>
    <string name="label_d">description</string>
    <string name="editDescription">Add a description</string>
    <string name="spinner_addincout1">selet a method</string>
    <string name="income_outcome">Income | Outcome</string>
    <string name="amount">Amount</string>
    <string name="date_text">Date</string>
    <string name="date_hint">DD/MM/YYYY</string>
    <string name="set_up_today">Set up today</string>
    <string name="spents_tittle">Spents</string>
    <string name="CashTxt">cash</string>
    <string name="add_cash_txt">Add Cash</string>
    <string name="save">Save</string>
    <string name="htaddCart">Add a Card</string>
    <string name="htaddIncome">Add Income Outcome</string>
    <string name="htconfiglang">Modify language</string>
    <string name="htaddTicket">Add a ticket</string>
    <string name="htaddDeleteData">Delete data</string>

    <string-array name="typeSaving">
        <item>Credit Card</item>
        <item>Debiit Card</item>
        <item>Cash</item>
        <item>Other</item>
    </string-array>
    <string-array name="seleccionar_dia">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="typeIncomeOutcome">
        <item>Income</item>
        <item>Outcome</item>
    </string-array>

    <string name="step1_htaddcart">1.- Go to the card section</string>
    <string name="step2_htaddcart">2.- Hit the floating button \'+\'</string>
    <string name="step3_htaddcart">3.- Fill the information required</string>
    <string name="step4_htaddcart">4.- Hit the save floating button</string>
    <string name="step5_htaddcart">5.- Your card have been added successfully</string>

    <string name="step1_htadd_ic">1.- Go to teh cash menu</string>
    <string name="step2_htadd_ic">2.- Hit the floating button +</string>
    <string name="step3_htadd_ic">3.- Fill the information required</string>
    <string name="step4_htadd_ic">4.- Hit the save floating button</string>
    <string name="step5_htadd_ic">5.- Your data have been saved successfully</string>

    <string name="step1_htconflan">1.- Go to the Settings section</string>
    <string name="step2_htconflan">2.- Go to the language section</string>
    <string name="step3_htconflan">3.- Select the option of your preference</string>
    <string name="step4_htconflan">4.- Select one of the options</string>
    <string name="step5_htconflan">5.- The language have been configured successfully</string>
    <string name="titleincout">How to add an income or outcome</string>
    <string name="ht_outinc_title">How to Add an income/outcome </string>
    <string name="ht_addticket_title">How to add a ticket</string>
    <string name="step1_ticket">Select the ticket option in the menu</string>
    <string name="Step2_ticket">On the main scree we will see the tickewts saved and a + button</string>
    <string name="Step3Ticket">Click on the + button to open the camera</string>
    <string name="Step4_ticket">Take the picture and hit the save button</string>
    <string name="Step5_ticket">We will have the picture saved on the app</string>
    <string name="ht_empty_title">How to empty data</string>
    <string name="step1_empty">Go to the menu</string>
    <string name="Step2_empty">Go to the settings section</string>
    <string name="Step3_empty">Scroll until you see the empty data option</string>
    <string name="Step4_empty">Hit on the empty data option</string>
    <string name="Step5_empty">Confirm</string>
    <string name="ht_lang_title">How to change the language</string>
    <string name="iv_photo">Photo</string>
    <string name="title_howto_card">How to add a card</string>
    <string name="title_activity_how_to_ticket">HowTo_ticket</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="rate_us_fr">Rate Us Fragment in progress jeje waiting till we publish the app</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="uploading">Uploading...</string>
    <string name="upload_success">Image Uploaded Succesfully!</string>
    <string name="upl_fail">Upload failed</string>
    <string name="loading">Loading</string>
    <string name="languaje">Languaje</string>
    <string name="select_languaje">Select Languaje</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="cutt_off">Cutt Off</string>
    <string name="limite_reached">Limite reached</string>
    <string name="payment_date">Payment Date</string>
    <string name="account">Account</string>
    <string name="modify_information">Modify Information</string>
    <string name="empty_data">Empty Data</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System Default</string>
    <string name="go_to_the_video">Go to the video</string>
    <string name="boton_inicio2">Sign in</string>
    <string name="logincontraseña">Password</string>
    <string name="loginemail">E-Mail</string>
    <string name="Sigin_text">Sign in</string>
    <string name="Sigin_email">E-Mail</string>
    <string name="sigin_password">Password</string>
    <string name="Sigin_pass_confirm">Confirm password</string>
    <string name="savetxt">Day selected</string>
    <string name="date">Date</string>
    <string name="empty_data_message">Are you sure that you want to empty\n</string>
    <string name="empty_data_message_2">all yor information? that includes\n</string>
    <string name="empty_data_message_3">your cards, spendings, personal\n</string>
    <string name="empty_data_message_4">information and tickets</string>
    <string name="confirm_btn">Confirm</string>
    <string name="cancel_btn">Cancel</string>
    <string name="date_txt">Date</string>
    <string name="saved_amount_txt">Saved Amount</string>
    <string name="cash_amount_txt">Cash amount</string>
    <string name="type_txt">Type</string>
    <string name="cash_amount_txt1">Cash amount</string>
    <string name="card_name">Card name</string>

</resources>